[metadata]
name = adabelief-slim
version = 0.0.1
author = Romain Keramitas
author_email = r.keramitas@gmail.com
description = Slim implementation of the AdaBelief optimizer in Pytorch 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/r0mainK/adabelief-slim
project_urls =
    Bug Tracker = https://github.com/r0mainK/adabelief-slim/issues
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Scientific/Engineering :: Artificial Intelligence
license = MIT
keywords=
    adabelief
    pytorch
    optimizers

[options]
packages = find:
python_requires = >=3.6
install_requires =
    torch>=1.4,<2

[flake8]
exclude =  .git, .eggs, __pycache__, .env/, build/, dist/
import-order-style = appnexus
inline-quotes = double
max-line-length = 99
max-doc-length = 99
per-file-ignores = __init__.py:F401
